version/0.31/_sources/api/solver/_autosummary/settings/species_4.rst.txt
:orphan:

.. _species_4:

species
=======

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.species_4
    :show-inheritance:

.. rubric:: Attributes

==========================================   =================================================================================================================

Attribute                                                                                                                                              Summary

==========================================   =================================================================================================================
:ref:`particle_species <particle_species>`                                                                                           'particle_species' child.

:ref:`particle <particle>`                                                                                                                   Particle species.

:ref:`last_species <last_species>`               Assign the last species in mixture. It should be the most abundant and it's transport equation is not solved.

:ref:`material <material_4>`                                                                                       Species particle mixture species materials.

==========================================   =================================================================================================================

.. rubric:: Included in:

======================================================   ============================================

Parent                                                                                        Summary

======================================================   ============================================
:ref:`particle_mixture_child <particle_mixture_child>`       'child_object_type' of particle_mixture.

======================================================   ============================================

