version/0.40/_sources/api/solver/_autosummary/settings/species_4.rst.txt
:orphan:

.. _species_4:

species
=======

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.species_4
    :show-inheritance:

.. rubric:: Attributes

==============================================   ================================================================================================================

Attribute                                                                                                                                                 Summary

==============================================   ================================================================================================================
:ref:`volumetric_species <volumetric_species>`                                                  Lists species involved in the mixture as volumetric contributors.

:ref:`volumetric <volumetric>`                                                                                                                Volumetric species.

:ref:`site <site>`                                                                                                                                  Site species.

:ref:`solid <solid_1>`                                                                                                                             Solid species.

:ref:`last_species <last_species>`                   Assign the last species in mixture. It should be the most abundant and its transport equation is not solved.

:ref:`material <material_4>`                                                                                                           Mixture species materials.

==============================================   ================================================================================================================

.. rubric:: Included in:

====================================   ===================================

Parent                                                             Summary

====================================   ===================================
:ref:`mixture_child <mixture_child>`       'child_object_type' of mixture.

====================================   ===================================

